# libstrategy

./: .gitmodules  CMakeLists.txt  README.md
include/: binarywrapper.h  linked_bucket.h  ptrie.h  ptrie_map.h  ptrie_stable.h
src/: CMakeLists.txt  SimpleTree.cpp  SimpleTree.h  ZonotopStrategy.cpp  ZonotopStrategy.h  bound.h  errors.h  libz2s.cpp  libz2s.h  main.cpp
test/: CMakeLists.txt  inconsistent_lookup.cpp  unordered_load.cpp
test/strategies/: inconsistent1.strategy
